# CellSim-3D-Multicellular-Biology-Drug-Testing-Simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/models/: golgi apparatus.glb  mitochondria.glb  nucleus.glb  rough ER.glb  smooth ER.glb
assets/shaders/: CellRender.metal  OrganelleRender.metal
src/: main.mm
src/core/: Constants.h
src/gpu/: MetalContext.h  MetalContext.mm  ShaderTypes.h
src/render/: Camera.cpp  Camera.h  GLBLoader.h  GLBLoader.mm  MeshLibrary.h  MeshLibrary.mm
src/simulation/: Simulation.h
